force-app/main/default/objects/Part_of_Term__c/Part_of_Term__c.object-meta.xml
<CustomObject>
    <label>Part of Term</label>
    <nameField>
        <label>Part of Term Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parts of Term</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>