force-app/main/default/objects/Part_of_Term__c/fields/Drop_Date__c.field-meta.xml
<CustomField>
    <fullName>Drop_Date__c</fullName>
    <description>Dropped and 100% Tuition Refunded</description>
    <inlineHelpText>Dropped and 100% Tuition Refunded</inlineHelpText>
    <label>Drop Date</label>
    <type>Date</type>
</CustomField>