force-app/main/default/objects/Part_of_Term__c/fields/Part_Of_Term_Reference__c.field-meta.xml
<CustomField>
    <fullName>Part_Of_Term_Reference__c</fullName>
    <description>Unique reference for a part of term</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique reference for a part of term</inlineHelpText>
    <label>Part Of Term Reference</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>