force-app/main/default/objects/Part_of_Term__c/fields/Withdraw_0_Date__c.field-meta.xml
<CustomField>
    <fullName>Withdraw_0_Date__c</fullName>
    <description>Withdrawn grade and 0% tuition refunded</description>
    <inlineHelpText>Withdrawn grade and 0% tuition refunded</inlineHelpText>
    <label>Withdraw 0 Date</label>
    <type>Date</type>
</CustomField>