force-app/main/default/objects/Part_of_Term__c/fields/Withdraw_50_Date__c.field-meta.xml
<CustomField>
    <fullName>Withdraw_50_Date__c</fullName>
    <description>Withdrawn Grade and 50% tuition refunded</description>
    <inlineHelpText>Withdrawn Grade and 50% tuition refunded</inlineHelpText>
    <label>Withdraw 50 Date</label>
    <type>Date</type>
</CustomField>